tests/NormalTests/paczka1/fuzzy1/29228293.err
Error in line 5: S428 A15 22,6
Error in line 7: 0RgFy8TkO S159 5,9
Error in line 9: S428 S428 16,3
Error in line 19: 0RgFy8TkO S159 72,1
Error in line 28: 5L3Km A15 5,9
